--- a/style/style.css
+++ b/style/style.css
@@ -69,3 +69,57 @@
   text-align: center;
   opacity: 0.7;
 }
+
+/* Favorite section style */
+.card_box {
+  height: 850px;
+  width: 1320px;
+  margin: 0 auto;
+  margin-top: 100px;
+  font-family: Work Sans;
+}
+.title_container {
+  text-align: center;
+  margin-bottom: 24px;
+}
+.sub_title {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0%;
+  opacity: 0.6;
+}
+.title {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 64px;
+  letter-spacing: 0%;
+}
+.favorite_container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+}
+.favorite_container .card button {
+  margin-top: 32px;
+  border-radius: 8px;
+  border: none;
+  font-size: 24px;
+  font-weight: 600;
+  background-color: rgba(82, 195, 3, 0.15);
+  padding: 14px 32px 14px 32px;
+}
+.favorite_container .card h3 {
+  margin: 24px 0px;
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 50px;
+  letter-spacing: 0%;
+}
+.favorite_container .card p {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+  opacity: 0.6;
+  margin-bottom: 64px;
+}
